Исправление ошибок первого ревью. Версия 2.